Added offline testing abilities that skirts around GNU Radio scheduler for testing until OS issues are resolved. Check the TEST folder for running code without GNU Radio.

--- a/GNU-Radio-Repositories/gr-RXOFDM/grc/RXOFDM_synch_and_chan_est.block.yml
+++ b/GNU-Radio-Repositories/gr-RXOFDM/grc/RXOFDM_synch_and_chan_est.block.yml
@@ -1,6 +1,6 @@
 id: RXOFDM_synch_and_chan_est
 label: synch_and_chan_est
-category: '[OFDM Receiver]'
+category: '[RXOFDM]'
 
 parameters:
 -   id: num_ofdm_symb
