Add further improvements to QPSK diagram.

--- a/GNU-Radio-Repositories/gr-utsa_ofdm/grc/utsa_ofdm_SynchAndChanEst.block.yml
+++ b/GNU-Radio-Repositories/gr-utsa_ofdm/grc/utsa_ofdm_SynchAndChanEst.block.yml
@@ -43,6 +43,9 @@ parameters:
 -   id: genie
     label: Genie (Offline-Only)
     dtype: bool
+-   id: channel
+    label: Type of Channel (Genie Only)
+    dtype: string
 
 inputs:
 -   domain: stream
