--- a/GNU-Radio-Repositories/TEST/gr-Test/grc/Test_testtest.block.yml
+++ b/GNU-Radio-Repositories/TEST/gr-Test/grc/Test_testtest.block.yml
@@ -11,14 +11,14 @@ templates:
 #     * id (makes the value accessible as keyname, e.g. in the make entry)
 #     * label (label shown in the GUI)
 #     * dtype (e.g. int, float, complex, byte, short, xxx_vector, ...)
-parameters:
-- id: parametername_replace_me
-  label: FIX ME:
-  dtype: string
-  value: You need to fill in your grc/Test_testtest.block.yaml
-#- id: ...
-#  label: ...
-#  dtype: ...
+#parameters:
+#- id: parametername_replace_me
+#  label:
+#  dtype: string
+#  value: grc/Test_testtest.block.yaml
+##- id: ...
+##  label: ...
+##  dtype: ...
 
 #  Make one 'inputs' list entry per input and one 'outputs' list entry per output.
 #  Keys include:
@@ -28,18 +28,18 @@ parameters:
 #      * vlen (optional - data stream vector length. Default is 1)
 #      * optional (optional - set to 1 for optional inputs. Default is 0)
 inputs:
-#- label: ...
-#  domain: ...
-#  dtype: ...
-#  vlen: ...
-#  optional: ...
+- label: Call Central
+  domain: stream
+  dtype: complex
+  vlen: 1
+  optional:
 
 outputs:
-#- label: ...
-#  domain: ...
-#  dtype: ...
-#  vlen: ...
-#  optional: ...
+- label: Do Not Call
+  domain: stream
+  dtype: complex
+  vlen: 1
+  optional: 0
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
